test/fail/repeated1.min
program
    function number hello number a do
        number a;
        return a
start

end
